tooling/nargo_cli/tests/snapshots/execution_success/assert/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field) {
    assert(x == 1);
    assert(1 == conditional(x != 0));
}

fn conditional(x: bool) -> Field {
    assert(x, f"Expected x to be true but got {x}");
    assert(x == true, f"Expected x to be true but got {x}");
    1
}
